Add version embed on building Add inStream func Add README how2use 🦐

--- a/cli/makefile
+++ b/cli/makefile
@@ -2,10 +2,11 @@ OS = linux
 ARCH = amd64
 EXE = bobibo_$(OS)_$(ARCH)
 IS_STATIC = 0
+VERSION=V1.0.1
 all: build
 
 build: cli.go
-	CGO_ENABLED=$(IS_STATIC) GOOS=$(OS) GOARCH=$(ARCH) go build -ldflags="-s -w" -o $(EXE)
+	CGO_ENABLED=$(IS_STATIC) GOOS=$(OS) GOARCH=$(ARCH) go build -ldflags="-X 'main.version=$(VERSION)' -s -w" -o $(EXE)
 	@echo Build Success !!!
 
 compress: $(EXE)
